correcting overflow on mobile resolution

--- a/src/componentes/Education/Education.css
+++ b/src/componentes/Education/Education.css
@@ -5,6 +5,7 @@
 .Education .education-icon {
     width: 5rem;
     height: 5rem;
+    margin: 0;
 }
 
 .Education .education p {
@@ -27,6 +28,7 @@
 
 .Education .medium-title {
     font-size: 2rem;
+    padding-left: 1rem;
 }
 
 
@@ -43,7 +45,7 @@
 }
 
 .Education .course-date {
-    margin-left: 1rem;
+    padding-left: 1rem;
     font-size: 0.8rem;
     text-align: left;
     font-weight: bolder;
