--- a/src/componentes/Resume/Resume.css
+++ b/src/componentes/Resume/Resume.css
@@ -31,6 +31,7 @@
 .Resume .icon-small {
     width: 5rem;
     height: 5rem;
+    margin: 1rem
 }
 
 .Resume .about-img {
